kubernetes/production/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
    name: prod
    labels:
        name: prod
        secrets-injection: enabled
