kubernetes/production/gateway.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hire.debens.app
  namespace: prod
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /employment/cv.pdf
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - hire.debens.app
      secretName: tls-prod-ingress-http
  rules:
    - host: hire.debens.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  name: s3
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: truth.debens.app
  namespace: prod
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /truth/$1/index.html
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - truth.debens.app
      secretName: tls-prod-ingress-truth-http
  rules:
    - host: truth.debens.app
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  name: s3
---
