kubernetes/production/minio.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: prod
  name: minio
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
      - minio
  defaultBackend:
    service:
      name: minio-admin
      port: 
        name: console
---
apiVersion: v1
kind: Service
metadata:
    name: minio
    namespace: prod
spec:
    selector:
        app: minio
    ports:
        - port: 9000
          name: s3
---
apiVersion: v1
kind: Service
metadata:
    name: minio-admin
    namespace: prod
spec:
    selector:
        app: minio
    ports:
        - port: 9090
          name: console
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: minio
    namespace: prod
    labels:
        app: minio
spec:
    replicas: 1
    selector:
        matchLabels:
            app: minio
    template:
        metadata:
            name: minio
            labels:
                app: minio
        spec:
            restartPolicy: Always
            containers:
                - name: minio
                  image: quay.io/minio/minio:latest
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                      httpGet:
                          path: /minio/health/live
                          port: 9000
                      initialDelaySeconds: 120
                      periodSeconds: 20
                  readinessProbe:
                      httpGet:
                          path: /minio/health/ready
                          port: 9000
                      initialDelaySeconds: 120
                      periodSeconds: 20
                  resources:
                      requests:
                          memory: "1000Mi"
                          cpu: "1000m"
                      limits:
                          memory: "1500Mi"
                          cpu: "1500m"
                  volumeMounts:
                      - mountPath: /data
                        name: data
                  command:
                      - /bin/bash
                      - -c
                  args:
                      - minio server /data --console-address :9090
            volumes:
                - name: data
                  emptyDir:
                      sizeLimit: 500Mi
